[gd_scene load_steps=9 format=3 uid="uid://b8hnr1nstuj2m"]

[ext_resource type="PackedScene" uid="uid://bpi1wlmpddgdt" path="res://Escenas/CrearPersonaje/clase_y_raza.tscn" id="1_j07o0"]
[ext_resource type="Script" path="res://Scripts/CrearPersonaje/EquipamientoPersonaje/Proficiencias.gd" id="2_ienei"]
[ext_resource type="Script" path="res://Scripts/VerPersonaje/VerEquipamiento.gd" id="3_q5nm8"]
[ext_resource type="Script" path="res://Scripts/CrearPersonaje/EquipamientoPersonaje/EstadisticasEquipamiento.gd" id="4_me6d0"]
[ext_resource type="PackedScene" uid="uid://bbl3lr3dapjkg" path="res://Escenas/botonesVolverSiguiente.tscn" id="4_vxkke"]
[ext_resource type="Script" path="res://Escenas/botonesVolverSiguiente.gd" id="5_2n1tb"]

[sub_resource type="Theme" id="Theme_m2vak"]
default_font_size = 23
BoxContainer/constants/separation = 4
GridContainer/constants/h_separation = 4
GridContainer/constants/v_separation = 50
HBoxContainer/constants/separation = 6
Label/font_sizes/font_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_scc2i"]
draw_center = false
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.686275, 0.686275, 0.686275, 1)

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = SubResource("Theme_m2vak")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -362.0
offset_top = -642.0
offset_right = 362.0
offset_bottom = 640.0
color = Color(0, 0.00392157, 0.0509804, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = -358.0
offset_top = -640.0
offset_right = 358.0
offset_bottom = 638.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="CabezaTitulo" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_scc2i")

[node name="ContTitulo" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CabezaTitulo"]
layout_mode = 2
alignment = 1

[node name="Titulo" type="Label" parent="MarginContainer/VBoxContainer/CabezaTitulo/ContTitulo"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Equipamiento"
horizontal_alignment = 1

[node name="ClaseYProficiencias" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Clase y Raza" parent="MarginContainer/VBoxContainer/ClaseYProficiencias" instance=ExtResource("1_j07o0")]
layout_mode = 2

[node name="Proficiencias" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ClaseYProficiencias"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Titulo" type="Label" parent="MarginContainer/VBoxContainer/ClaseYProficiencias/Proficiencias"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Proficiencias:"

[node name="Textos" type="GridContainer" parent="MarginContainer/VBoxContainer/ClaseYProficiencias/Proficiencias" node_paths=PackedStringArray("nodoArmaduras", "nodoArmas")]
layout_mode = 2
theme_override_constants/v_separation = 10
columns = 2
script = ExtResource("2_ienei")
nodoArmaduras = NodePath("Armaduras")
nodoArmas = NodePath("Armaduras2")

[node name="TArmaduras" type="Label" parent="MarginContainer/VBoxContainer/ClaseYProficiencias/Proficiencias/Textos"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Armaduras:"

[node name="Armaduras" type="Label" parent="MarginContainer/VBoxContainer/ClaseYProficiencias/Proficiencias/Textos"]
custom_minimum_size = Vector2(270, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Texto, a, a, a"
autowrap_mode = 2

[node name="TArmas" type="Label" parent="MarginContainer/VBoxContainer/ClaseYProficiencias/Proficiencias/Textos"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Armas:"

[node name="Armaduras2" type="Label" parent="MarginContainer/VBoxContainer/ClaseYProficiencias/Proficiencias/Textos"]
custom_minimum_size = Vector2(270, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Texto"
autowrap_mode = 2

[node name="Equipamiento" type="GridContainer" parent="MarginContainer/VBoxContainer" node_paths=PackedStringArray("nOro", "nProficienciaArmadura", "nProficienciaMano1", "nProficienciaMano2", "nInventario", "nArmaduras", "nMano1", "nMano2")]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 20
columns = 3
script = ExtResource("3_q5nm8")
nOro = NodePath("OInput")
nProficienciaArmadura = NodePath("ArmaduraProficiencia")
nProficienciaMano1 = NodePath("ArmaProficiencia")
nProficienciaMano2 = NodePath("Arma2Proficiencia")
nInventario = NodePath("IInput")
nArmaduras = NodePath("AInput")
nMano1 = NodePath("AInput2")
nMano2 = NodePath("AInput3")

[node name="OroInicial" type="Label" parent="MarginContainer/VBoxContainer/Equipamiento"]
layout_mode = 2
text = "Oro Inicial"

[node name="OInput" type="SpinBox" parent="MarginContainer/VBoxContainer/Equipamiento"]
layout_mode = 2
size_flags_horizontal = 0
max_value = 10000.0
step = 0.1

[node name="Dummy" type="Control" parent="MarginContainer/VBoxContainer/Equipamiento"]
layout_mode = 2

[node name="Armadura" type="Label" parent="MarginContainer/VBoxContainer/Equipamiento"]
layout_mode = 2
text = "Armadura
"

[node name="AInput" type="OptionButton" parent="MarginContainer/VBoxContainer/Equipamiento"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="ArmaduraProficiencia" type="CheckBox" parent="MarginContainer/VBoxContainer/Equipamiento"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Proficiente"

[node name="Arma" type="Label" parent="MarginContainer/VBoxContainer/Equipamiento"]
layout_mode = 2
text = "1ra Mano
"

[node name="AInput2" type="OptionButton" parent="MarginContainer/VBoxContainer/Equipamiento"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="ArmaProficiencia" type="CheckBox" parent="MarginContainer/VBoxContainer/Equipamiento"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Proficiente"

[node name="Arma2" type="Label" parent="MarginContainer/VBoxContainer/Equipamiento"]
layout_mode = 2
text = "2da Mano
"

[node name="AInput3" type="OptionButton" parent="MarginContainer/VBoxContainer/Equipamiento"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Arma2Proficiencia" type="CheckBox" parent="MarginContainer/VBoxContainer/Equipamiento"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Proficiente"

[node name="Inventario" type="Label" parent="MarginContainer/VBoxContainer/Equipamiento"]
layout_mode = 2
text = "Inventario
"

[node name="IInput" type="TextEdit" parent="MarginContainer/VBoxContainer/Equipamiento"]
custom_minimum_size = Vector2(400, 350)
layout_mode = 2
placeholder_text = "Armas, Ropa, etc."

[node name="EstadisticasEquipamiento" type="GridContainer" parent="MarginContainer/VBoxContainer" node_paths=PackedStringArray("contArmadura", "contMano1", "contMano2", "contNombresEscudo", "opcionArmadura", "opcionMano1", "opcionMano2")]
layout_mode = 2
theme_override_constants/v_separation = 15
columns = 2
script = ExtResource("4_me6d0")
contArmadura = NodePath("Estadisticas/Valores")
contMano1 = NodePath("Estadisticas2/Valores")
contMano2 = NodePath("Estadisticas3/Valores")
contNombresEscudo = NodePath("Estadisticas3/NombresEscudo")
opcionArmadura = NodePath("../Equipamiento/AInput")
opcionMano1 = NodePath("../Equipamiento/AInput2")
opcionMano2 = NodePath("../Equipamiento/AInput3")

[node name="Armadura" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento"]
layout_mode = 2
text = "Armadura: "

[node name="Estadisticas" type="VBoxContainer" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Nombres" type="HBoxContainer" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas/Nombres"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Prot."
horizontal_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas/Nombres"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Prueba"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas/Nombres"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Vel."
horizontal_alignment = 1

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas/Nombres"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Precio"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas/Nombres"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Peso"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas"]
layout_mode = 2

[node name="Valores" type="HBoxContainer" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas"]
layout_mode = 2

[node name="Bonificador" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas/Valores"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "0"
horizontal_alignment = 1

[node name="Prueba" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas/Valores"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "0"
horizontal_alignment = 1

[node name="Velocidad" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas/Valores"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "0"
horizontal_alignment = 1

[node name="Precio" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas/Valores"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "0"
horizontal_alignment = 1

[node name="Peso" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas/Valores"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "0"
horizontal_alignment = 1

[node name="Arma1" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento"]
layout_mode = 2
text = "1ra Mano: "

[node name="Estadisticas2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Nombres" type="HBoxContainer" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas2/Nombres"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Daño"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas2/Nombres"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Comp"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas2/Nombres"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Rango"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas2/Nombres"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Peso"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas2/Nombres"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Precio"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas2"]
layout_mode = 2

[node name="Valores" type="HBoxContainer" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas2"]
layout_mode = 2

[node name="Daño" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas2/Valores"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Null"
horizontal_alignment = 1

[node name="Competencia" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas2/Valores"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "0"
horizontal_alignment = 1

[node name="Rango" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas2/Valores"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "0"
horizontal_alignment = 1

[node name="Peso" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas2/Valores"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "0"
horizontal_alignment = 1

[node name="Precio" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas2/Valores"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "0"
horizontal_alignment = 1

[node name="Arma2" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento"]
layout_mode = 2
text = "2da Mano: "

[node name="Estadisticas3" type="VBoxContainer" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NombresEscudo" type="HBoxContainer" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas3"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas3/NombresEscudo"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Bonificador"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas3/NombresEscudo"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Prueba"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas3/NombresEscudo"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Velocidad"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas3/NombresEscudo"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Peso"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas3/NombresEscudo"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Precio"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas3"]
layout_mode = 2

[node name="Valores" type="HBoxContainer" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas3"]
layout_mode = 2

[node name="Daño" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas3/Valores"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Null"
horizontal_alignment = 1

[node name="Competencia" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas3/Valores"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "0"
horizontal_alignment = 1

[node name="Rango" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas3/Valores"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "0"
horizontal_alignment = 1

[node name="Peso" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas3/Valores"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "0"
horizontal_alignment = 1

[node name="Precio" type="Label" parent="MarginContainer/VBoxContainer/EstadisticasEquipamiento/Estadisticas3/Valores"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "0"
horizontal_alignment = 1

[node name="Botones" parent="MarginContainer" node_paths=PackedStringArray("oro", "armadura", "mano1", "mano2", "inventario", "nPArmadura", "nPMano1", "nPMano2") instance=ExtResource("4_vxkke")]
layout_mode = 2
script = ExtResource("5_2n1tb")
oro = NodePath("../VBoxContainer/Equipamiento/OInput")
armadura = NodePath("../VBoxContainer/Equipamiento/AInput")
mano1 = NodePath("../VBoxContainer/Equipamiento/AInput2")
mano2 = NodePath("../VBoxContainer/Equipamiento/AInput3")
inventario = NodePath("../VBoxContainer/Equipamiento/IInput")
nPArmadura = NodePath("../VBoxContainer/Equipamiento/ArmaduraProficiencia")
nPMano1 = NodePath("../VBoxContainer/Equipamiento/ArmaProficiencia")
nPMano2 = NodePath("../VBoxContainer/Equipamiento/Arma2Proficiencia")
rutaVolver = "res://Escenas/CrearPersonaje/EstadisticasPersonaje.tscn"
rutaSiguiente = "res://Escenas/MenuPersonaje/MenuPersonaje.tscn"

[node name="Volver" parent="MarginContainer/Botones" index="0"]
visible = false

[node name="Siguiente" parent="MarginContainer/Botones" index="1"]
size_flags_horizontal = 2
text = "Volver"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/Equipamiento/AInput" to="MarginContainer/VBoxContainer/EstadisticasEquipamiento" method="_on_a_input_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Equipamiento/AInput2" to="MarginContainer/VBoxContainer/Equipamiento" method="_on_a_input_2_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Equipamiento/AInput2" to="MarginContainer/VBoxContainer/EstadisticasEquipamiento" method="_on_a_input_2_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Equipamiento/AInput3" to="MarginContainer/VBoxContainer/Equipamiento" method="_on_a_input_3_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Equipamiento/AInput3" to="MarginContainer/VBoxContainer/EstadisticasEquipamiento" method="_on_a_input_3_item_selected"]

[editable path="MarginContainer/Botones"]
